--- a/procedure/code/RPL-Report.Rmd
+++ b/procedure/code/RPL-Report.Rmd
@@ -43,7 +43,7 @@ knitr::opts_chunk$set(
   eval = TRUE,
   fig.retina = 4,
   fig.height = 7.5,
-  fig.width = 6.5,
+  fig.width = 4.5,
   fig.path = paste0(here("results", "figures"), "/"),
   warning = FALSE,
   message = FALSE,
@@ -145,8 +145,7 @@ $p_{ij}$ is the probability of dispersal between two sites $i$ and $j$, $a_i$ an
 To construct our site connectivity measures, we independently gathered data on PA geographies from the the World Database on Protected Areas ([https://www.protectedplanet.net/en/thematic-areas/wdpa?tab=WDPA](https://www.protectedplanet.net/en/thematic-areas/wdpa?tab=WDPA)). 
 The WDPA dataset was pre-processed using several steps to ensure accuracy and relevance for the study. 
 First, we used the `wdpa_fetch` and `wdpa_clean` functions from the R package `wdpar` to query and clean the data. 
-This process excluded PAs that were not yet implemented or had limited conservation value, replaced missing data codes with NA values, converted point-based PAs into circular shapes that correspond to their reported extent, fixed topological errors, and removed overlapping areas 
-Details about this procedures are available in the `wdpa_clean` function. 
+This process excluded PAs that were not yet implemented or had limited conservation value, replaced missing data codes with NA values, converted point-based PAs into circular shapes that correspond to their reported extent, fixed topological errors, and removed overlapping areas. Details about this procedures are available in the `wdpa_clean` function. 
 
 Next, we restricted our analysis by subsetting to those terrestrial PAs located within the study area. 
 We then merged administratively distinct, but physically connected PAs and segmented PAs that were part of the same administrative unit, but not physically connected. 
@@ -161,7 +160,7 @@ Only PAs located on the same landmass were considered when calculating landscape
 Once the PAs and their corresponding clusters were prepared, we began calculating the $AWF$ for observation sites. 
 Calculation of $AWF$ depends on the specification of a median dispersal distance. 
 To assess the effect of varying dispersal distances, we computed $AWF$ using a range of median dispersal distances between 10km and 150km. 
-For each specified dispersal distance, we identified the PAs around each site and within a buffer set to five times the dispersal distance 
+For each specified dispersal distance, we identified the PAs around each site and within a buffer set to five times the dispersal distance.
 For mammals, only PAs in the same continent as the observation site were included. The Euclidean distances between the observation site and the selected PAs were then used to calculate the AWF for that site.
 
 This procedure is implemented as:
@@ -239,7 +238,7 @@ Sensitivity analyses for alternative threshold are included in section 6.
 # Replicate spillover models for birds w/ connectivity
 rpl_spill_bird <- lapply(1:nrow(var_catalog), function(i){
     mods <- lapply(c("BigPA", "CloseToPA"), function(bnr_var){
-        model_pa_spillover(dat_clean_bird, "connec+", "bird", bnr_var, 
+        model_pa_spillover(dat_clean_bird, "connec", "bird", bnr_var, 
                        var_catalog[[i, "response_variable"]], "auto")
     })
     names(mods) <- sprintf("mod_bird_%s_%s", c("size", "dist"), 
@@ -250,7 +249,7 @@ rpl_spill_bird <- lapply(1:nrow(var_catalog), function(i){
 # Replicate spillover models for mammals w/ connectivity
 rpl_spill_mammal <- lapply(1:nrow(var_catalog), function(i){
     mods <- lapply(c("BigPA", "CloseToPA"), function(bnr_var){
-        model_pa_spillover(dat_clean_mammal, "connec+", "mammal", bnr_var, 
+        model_pa_spillover(dat_clean_mammal, "connec", "mammal", bnr_var, 
                        var_catalog[[i, "response_variable"]], "auto")
     })
     names(mods) <- sprintf("mod_mammal_%s_%s", c("size", "dist"), 
@@ -269,14 +268,12 @@ mods <- list("bird" = do.call(c, list(rpl_efficacy_bird, rpl_spill_bird)),
 # Define variable convert table
 var_cvt <- data.frame(
     term = c("R2", "(Intercept)", "forest_structure", "access_log10.z", 
-             "HDI.z", "PA", "connectivity.z", "PA:connectivity.z",
-             "dist_to_PA.z", "BigPA", "BigPA:connectivity.z",
-             "PA_size_km2.z", "CloseToPA", "CloseToPA:connectivity.z"),
+             "HDI.z", "PA",  "dist_to_PA.z", "BigPA", 
+             "PA_size_km2.z", "CloseToPA", "connectivity.z"),
     Variable = c("$R^{2}$", "(Intercept)", "Forest canopy height",
-                 "Site accessibility", "HDI", "PA", "Connectivity",
-                 "PA|Connectivity", "Distance to PA", "PA size (binary)",
-                 "PA size|Connectivity", "PA size", 
-                 "Distance to PA (binary)", "Distance to PA|Connectivity"))
+                 "Site accessibility", "HDI", "PA",
+                 "Distance to PA", "PA size (binary)", "PA size", 
+                 "Distance to PA (binary)", "Connectivity"))
 
 coefs <- lapply(names(mods), function(taxon){
     models <- mods[[taxon]]
@@ -293,7 +290,7 @@ coefs <- lapply(names(mods), function(taxon){
         r_square <- r.squaredGLMM(models[[nm]])[[2]]
         
         # Do the tidy work
-        broom.mixed::tidy(
+        vals <- broom.mixed::tidy(
             models[[nm]], effects='fixed', conf.int = TRUE) %>% 
             mutate(report_value = sprintf("%.3f\n(%.3f; %.3f)", 
                                           estimate, std.error, p.value)) %>% 
@@ -302,6 +299,7 @@ coefs <- lapply(names(mods), function(taxon){
             left_join(var_cvt, by = "term") %>% 
             mutate(var_nm = var_nm, Effect = effect_nm) %>% 
             select(Effect, Variable, report_value, var_nm)
+        rbind(vals[1:5, ], vals[7, ], vals[6, ])
     }) %>% bind_rows() %>% 
         mutate(var_nm = factor(var_nm, levels = c("SR", "FR", "PD"))) %>% 
         arrange(var_nm) %>% 
@@ -321,9 +319,8 @@ coefs <- coefs %>% select(-Effect) %>%
 # Bold some cells
 row_ids <- which(coefs$Variable %in% 
                      c("PA", "Connectivity",
-                       "PA|Connectivity", "PA size (binary)",
-                       "PA size|Connectivity", "Distance to PA (binary)",
-                       "Distance to PA|Connectivity"))
+                       "PA size (binary)",
+                       "Distance to PA (binary)"))
 detec_sig <- coefs[row_ids, -1]
 detec_sig <- do.call(cbind, lapply(1:ncol(detec_sig), function(i){
     as.numeric(sapply(detec_sig[[i]], function(x){
@@ -355,8 +352,8 @@ coefs %>%
     kable_styling(latex_options = c("scale_down", "hold_position"), 
                   font_size = 10) %>% 
     pack_rows(effects[1], min(row_1), max(row_1), latex_gap_space = "1em") %>%
-    pack_rows(effects[2], min(row_2), max(row_2), latex_gap_space = "1em") %>% 
-    pack_rows(effects[3], min(row_3), max(row_3), latex_gap_space = "1em") %>% 
+    pack_rows(effects[2], min(row_2), max(row_2), latex_gap_space = "1em") %>%
+    pack_rows(effects[3], min(row_3), max(row_3), latex_gap_space = "1em") %>%
     add_header_above(c(" " = 1, "Bird" = 3, "Mammal" = 3),
                      align = "c")
 ```
@@ -378,12 +375,12 @@ The magnitude of the estimate of PA size effect in the FR model for birds is les
 ```{r compare_eff, echo = FALSE, message = FALSE, warning = FALSE}
 compare_eff <- data.frame(
     Change = c("Direction", "Magnitude", "Significance"),
-    SR = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
+    SR = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s"),
     FR = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
     PD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s")) %>% 
     cbind(data.frame(
-        SR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ ns"),
-        FR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ ns"),
+        SR = c("- $\\rightarrow$ +", "$\\uparrow$", "$\\equiv$ ns"),
+        FR = c("- $\\rightarrow$ +", "$\\uparrow$", "$\\equiv$ ns"),
         PD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns")))
 ```
 
@@ -391,21 +388,21 @@ compare_eff <- data.frame(
 compare_spl <- data.frame(
     Change = c("Direction", "Magnitude", "Significance"),
     SR = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns"),
-    FR = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"),
+    FR = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s"),
     PD = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ s")) %>% 
     cbind(data.frame(
-        SR = c("$\\equiv$", "$\\uparrow$", "s $\\rightarrow$ ns"),
-        FR = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ s"),
-        PD = c("$\\equiv$", "$\\downarrow$", "s $\\rightarrow$ ns"))) %>% 
+        SR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ s"),
+        FR = c("+ $\\rightarrow$ -", "$\\downarrow$", "s $\\rightarrow$ ns"),
+        PD = c("+ $\\rightarrow$ -", "$\\downarrow$", "s $\\rightarrow$ ns"))) %>% 
     rbind(data.frame(
         Change = c("Direction", "Magnitude", "Significance"),
-        SR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ s"),
+        SR = c("$\\equiv$", "$\\uparrow$", "s $\\rightarrow$ ns"),
         FR = c("$\\equiv$", "$\\uparrow$", "ns $\\rightarrow$ s"),
-        PD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns")) %>% 
+        PD = c("- $\\rightarrow$ +", "$\\uparrow$", "$\\equiv$ ns")) %>% 
             cbind(data.frame(
-                SR = c("$\\equiv$", "$\\uparrow$", "ns $\\rightarrow$ s"),
-                FR = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns"),
-                PD = c("$\\equiv$", "$\\downarrow$", "$\\equiv$ ns"))))
+                SR = c("$\\equiv$", "$\\uparrow$", "$\\equiv$ ns"),
+                FR = c("$\\equiv$", "$\\uparrow$", "ns $\\rightarrow$ s"),
+                PD = c("$\\equiv$", "$\\uparrow$", "ns $\\rightarrow$ s"))))
 
 rbind(compare_eff, compare_spl) %>%
     kableExtra::kbl(escape = FALSE, full_width = FALSE, booktabs = TRUE,
@@ -436,41 +433,63 @@ Compile models runs all the functions above and produces x...
 
 ```{r compile_models, echo = TRUE, message = FALSE, warning = FALSE, eval = FALSE}
 for (dist in seq(10, 150, 10)){
-    compile_models(taxon = "bird", med_dist = dist,
-                   src_dir = "data/derived/public", 
-                   dst_dir = "results")
-    compile_models(taxon = "mammal", med_dist = dist,
-                   src_dir = "data/derived/public", 
-                   dst_dir = "results")
+    try({
+        message(paste0(dist, " - bird"))
+        compile_models(taxon = "bird", 
+                       outliers = "auto", med_dist = dist,
+                       src_dir = "data/derived/public", 
+                       dst_dir = "results")
+        message(paste0(dist, " - mammal"))
+        compile_models(taxon = "mammal", 
+                       outliers = "auto", med_dist = dist,
+                       src_dir = "data/derived/public", 
+                       dst_dir = "results")  
+    })
 }
 
 # Generate plots
 plot_dist_effect(src_dir = "results", dst_dir = "results/figures")
 ```
 
-```{r, bird_eff_dist, echo = FALSE, message = FALSE, warning = FALSE, eval = TRUE}
+```{r, fake_load, echo = FALSE, results = 'hide', message = FALSE, warning = FALSE}
 load(here("results/figures/plot_dist_effect_taxons.rda"))
+```
 
+```{r, bird_eff_dist1, echo = FALSE, message = FALSE, warning = FALSE}
 # Birds 3x3 efficacy result over distance
 taxon_dist_plot$bird$`Phylogenetic diveristy (PD)` +
     ggtitle(paste0("Bird", " - ", "Phylogenetic diveristy (PD)")) +
     theme(plot.title = element_text(hjust = 0.5))
+```
+
+```{r, bird_eff_dist2, echo = FALSE, message = FALSE, warning = FALSE}
 taxon_dist_plot$bird$`Functional richness (FR)` +
     ggtitle(paste0("Bird", " - ", "Functional richness (FR)")) +
     theme(plot.title = element_text(hjust = 0.5))
+```
+
+```{r, bird_eff_dist3, echo = FALSE, message = FALSE, warning = FALSE}
 taxon_dist_plot$bird$`Species richness (SR)` +
     ggtitle(paste0("Bird", " - ", "Species richness (SR)")) +
     theme(plot.title = element_text(hjust = 0.5))
 ```
 
-```{r, mammal_eff_dist, echo = FALSE, message = FALSE, warning = FALSE, eval = TRUE}
+```{r, mammal_eff_dist1, echo = FALSE, message = FALSE, warning = FALSE}
 # Mammals 3x3 efficacy result over distance
 taxon_dist_plot$mammal$`Phylogenetic diveristy (PD)` +
     ggtitle(paste0("Mammal", " - ", "Phylogenetic diveristy (PD)")) +
     theme(plot.title = element_text(hjust = 0.5))
+```
+
+```{r, mammal_eff_dist2, echo = FALSE, message = FALSE, warning = FALSE}
+# Mammals 3x3 efficacy result over distance
 taxon_dist_plot$mammal$`Functional richness (FR)` +
     ggtitle(paste0("Mammal", " - ", "Functional richness (FR)")) +
     theme(plot.title = element_text(hjust = 0.5))
+```
+
+```{r, mammal_eff_dist3, echo = FALSE, message = FALSE, warning = FALSE}
+# Mammals 3x3 efficacy result over distance
 taxon_dist_plot$mammal$`Species richness (SR)` +
     ggtitle(paste0("Mammal", " - ", "Species richness (SR)")) +
     theme(plot.title = element_text(hjust = 0.5))
