--- a/software.bib
+++ b/software.bib
@@ -3,8 +3,32 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2023},
+  year = {2024},
   url = {https://www.R-project.org/},
+}
+
+@Manual{R-conflicted,
+  title = {conflicted: An Alternative Conflict Resolution Strategy},
+  author = {Hadley Wickham},
+  year = {2023},
+  note = {R package version 1.2.0},
+  url = {https://conflicted.r-lib.org/},
+}
+
+@Manual{R-formatR,
+  title = {formatR: Format R Code Automatically},
+  author = {Yihui Xie},
+  year = {2023},
+  note = {R package version 1.14},
+  url = {https://github.com/yihui/formatR},
+}
+
+@Manual{R-groundhog,
+  title = {groundhog: Version-Control for CRAN, GitHub, and GitLab Packages},
+  author = {Uri Simonsohn and Hugo Gruson},
+  year = {2024},
+  note = {R package version 3.2.1},
+  url = {https://groundhogr.com/},
 }
 
 @Manual{R-here,
@@ -15,22 +39,11 @@
   url = {https://here.r-lib.org/},
 }
 
-@Manual{R-tidyverse,
-  title = {tidyverse: Easily Install and Load the Tidyverse},
-  author = {Hadley Wickham},
-  year = {2023},
-  note = {R package version 2.0.0},
-  url = {https://tidyverse.tidyverse.org},
-}
-
-@Article{tidyverse2019,
-  title = {Welcome to the {tidyverse}},
-  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-  year = {2019},
-  journal = {Journal of Open Source Software},
-  volume = {4},
-  number = {43},
-  pages = {1686},
-  doi = {10.21105/joss.01686},
+@Manual{R-kableExtra,
+  title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2024},
+  note = {R package version 1.4.0},
+  url = {http://haozhu233.github.io/kableExtra/},
 }
 
